--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,19 +16,12 @@ html
 
 /*  */
 
-.header {
-  display: flex;
-  width: 100%;
-  height: 100px;
-}
+
 /* nav-bar menu */
-.connection
-{
-    width:100%;
-}
+
 
 nav {
-  width: 100%;
+  /* width: 90%; */
   background: #41046f;
   padding: 1px 4px 1px 7px;
   border: 1px solid #000;
@@ -213,7 +206,7 @@ nav ul li.btn span.show:before {
 /*CategorieCoupDeCoeur*/
 .CategorieCoupDeCoeur{
     border-bottom: 5px solid black;
-    
+
 }
 .CategorieCoupDeCoeur li{
     display: flex !important;
@@ -480,4 +473,16 @@ footer .social-media-links a:hover svg circle {
 li
 {
     display: initial;
+}
+
+.co_admin
+{
+    display:grid;
+    justify-content:center;
+
+}
+
+.nav_container
+{
+    margin-right: -10px;
 }
