--- a/public/css/style.css
+++ b/public/css/style.css
@@ -457,7 +457,7 @@ footer .social-media-links a:hover svg circle {
 }
 
 
-.tenaire {
+.part {
   background: #f2f2f2;
   float: inline-end;
 }
@@ -496,3 +496,4 @@ li
 {
     margin-right: -10px;
 }
+
