--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,8 +130,45 @@ nav
     font-weight:bold;
     margin-right: 30px;
   }
+
+  /* modal lien-mort */
+  .modal-lien
+  {
+    display : flex;
+    align-items: center;
+  }
   
-  .part {
+.modal-module
+{
+    display : flex;
+    align-items: center;
+    width: 70%;
+    height: 100%;
+    justify-content: space-around;
+}
+.precision
+{
+    
+}
+.logo_m
+{
+    max-width:400px;
+    max-height:600px;
+}
+.etiquette
+{
+    max-width:350px;
+    display: flex;
+    justify-content: center;
+}
+
+.et
+{
+    margin-left:10px;
+    border-radius: 7px;
+    
+}
+.part {
   
     max-width: 100px;
     max-height: 100px;
@@ -606,6 +643,7 @@ nav ul li.btn span.show:before {
     fill: #c7b40e;
   } 
    
+  
 
   /*Contact Modal*/
   .modal-dialog{
