--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,15 +79,18 @@ input[type="submit"]:hover
 }
 
 /* modal photo */
-.modal-dialog{
+.modal-p
+{
   width: 90%;
-  height: 90%;
+  height: 45vw;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
   background-color: rgba(255,255,255,0.8);
   padding: 1%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .modal-photo
