--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,11 +26,15 @@ h1
   text-align: left !important;
 }
 
+h2
+{
+  margin: 10px;
+}
+
 li
 {
   display: initial;
 }
-
 
 body
 {
@@ -52,6 +56,7 @@ textarea
   resize: vertical;
   border-radius: 5px;
 }
+
 input[type="submit"] 
 {
   margin: 5px;
@@ -123,8 +128,10 @@ input[type="submit"]:hover
   height: 100%;
   justify-content: space-around;
 }
+
 .desc
 {
+  font-family: 'Rubik', sans-serif !important;
   margin-left:15px;
 }
 
@@ -132,6 +139,26 @@ input[type="submit"]:hover
 {
   max-width:400px;
   max-height:600px;
+}
+
+.nom-action
+{
+  margin: 10px;
+  color: #41046f;
+  font-family: 'Rubik', sans-serif !important;
+}
+
+.action
+{
+  display: flex;
+  flex-flow: wrap;
+}
+
+.all-action
+{
+  display: flex;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .miniature-module
@@ -144,8 +171,8 @@ input[type="submit"]:hover
 .card-module
 {
   display: flex;
-  justify-content: space-around;
   flex-flow: wrap;
+  justify-content:space-between;
 }
 
 .module
@@ -157,6 +184,36 @@ input[type="submit"]:hover
   width: 300px;
   height: 130px;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  font-family: 'Rubik', sans-serif !important;
+}
+
+.nom-modal
+{
+  margin-left: 5px;
+  margin-top: 10px;
+}
+
+.listing-prestation
+{
+  width:100%;
+}
+
+.prestation-card
+{
+  display: flex;
+}
+
+.titre
+{
+  display: flex;
+}
+
+.crud
+{
+  margin-left: 10px;
+  color:#41046f;
 }
 
 /* gestion etiquettes */
