--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,14 +100,8 @@ input[type="submit"]:hover
 
 .modal-photo
 {
-  display:flex;
   max-width:100%;
-  max-height: 700px;;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex !important;
-  align-items: center;
-  justify-content: center;
+  max-height: 700px;
 }
 
 /* modal lien-mort */
@@ -1013,7 +1007,6 @@ footer .social-media-links a:hover svg circle
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 90%;
   height: 100%;
   margin: 30px auto 50px;
 }
@@ -1047,18 +1040,24 @@ footer .social-media-links a:hover svg circle
 
 .elem 
 {
+
+}
+
+.couv
+{
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 90%;
+  justify-content: center;
   align-items: center;
 }
 
 .elem img 
 {
-  width: 85%;
+  width: auto;
   max-width: 200px;
+  max-height: 160px;
   height: auto;
-  margin: 5px;
-  padding: 5px;
 }
 
 .galerie-title 
@@ -1067,6 +1066,7 @@ footer .social-media-links a:hover svg circle
   text-align: center;
   font-weight: 600;
   font-size: 15px;
+  margin-bottom: 5px;
 }
 
 /* contact */
